--- a/public/index.css
+++ b/public/index.css
@@ -5,6 +5,17 @@
 body{
     background-color: #f2e9e4;
 }
+#horizontalMenu{
+    display: flex;
+    justify-content: space-evenly;
+    position: sticky;
+    top: 0px;
+    background-color: #22223b;
+}
+.links{
+    color:#f2e9e4;
+    text-decoration:none;
+}
 #set1{
     margin: 50px 0;
     display: flex;
