--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,17 +3,19 @@
 
         <head>
             <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
+            <meta http-equiv = "X-UA-Compatible" content = "IE=edge">
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel ="stylesheet" href="index.css">
+            <link rel ="stylesheet" href = "/index.css">
             <script src="https://kit.fontawesome.com/57a72e588d.js" crossorigin="anonymous"></script>
         </head>
+
         <body>
+
             <div id = "horizontalMenu">
                 <a class = "links" href = "classes.html" target = "_blank">Classes<i class="fas fa-book"></i></a>
                 <a class = "links" href = "createClass.html" target = "_blank">Create Class<i class="fas fa-plus"></i></a>
                 <a class = "links" href = "students.html" target = "_blank">Students<i class="fas fa-users"></i></a>
-                <a class = "links" href = "addStudents.html" target = "_blank">Add Students<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "/addStudents.ejs" target = "_blank">Add Students<i class="fas fa-plus"></i></a>
                 <a class = "links" href = "teachers.html" target = "_blank">Teachers<i class="fas fa-users"></i></a>
                 <a class = "links" href = "attendance.html" target = "_blank">Take Attendance<i class="fas fa-address-book"></i></a>
             </div><br><br>
@@ -49,5 +51,7 @@
             </div>
 
         </body>
-        <script src ="index.js">
-    </script></html>
+
+        <script src ="/index.js"></script>
+
+    </html>
