--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,12 +12,12 @@
         <body>
 
             <div id = "horizontalMenu">
-                <a class = "links" href = "classes.html" target = "_blank">Classes<i class="fas fa-book"></i></a>
-                <a class = "links" href = "createClass.html" target = "_blank">Create Class<i class="fas fa-plus"></i></a>
-                <a class = "links" href = "students.html" target = "_blank">Students<i class="fas fa-users"></i></a>
-                <a class = "links" href = "/addStudents.ejs" target = "_blank">Add Students<i class="fas fa-plus"></i></a>
-                <a class = "links" href = "teachers.html" target = "_blank">Teachers<i class="fas fa-users"></i></a>
-                <a class = "links" href = "attendance.html" target = "_blank">Take Attendance<i class="fas fa-address-book"></i></a>
+                <a class = "links" href = "classes.ejs" target = "_blank">Classes<i class="fas fa-book"></i></a>
+                <a class = "links" href = "createClass.ejs" target = "_blank">Create Class<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "students.ejs" target = "_blank">Students<i class="fas fa-users"></i></a>
+                <a class = "links" href = "addStudents.ejs" target = "_blank">Add Students<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "teachers.ejs" target = "_blank">Teachers<i class="fas fa-users"></i></a>
+                <a class = "links" href = "attendance.ejs" target = "_blank">Take Attendance<i class="fas fa-address-book"></i></a>
             </div><br><br>
 
             <div id = "set1">
