--- a/public/classes.css
+++ b/public/classes.css
@@ -14,3 +14,28 @@ body{
     color:#f2e9e4;
     text-decoration:none;
 }
+#legend{
+    background-color: #22223b;
+    color:#f2e9e4
+}
+#classes{
+    margin: 10px 0;
+    border: solid black 3px;
+    display: block;
+    margin: 0 auto;
+    width: 270px;
+    height: 140px;
+    text-align: center;
+}
+.button{
+    background-color: #22223b;
+    color:#f2e9e4;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+
+#warning{
+    text-align: center;
+    color: #22223b;
+    font-weight: 1000;
+}
