--- a/views/createClass.ejs
+++ b/views/createClass.ejs
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
     <html>
         <head>
-            <link rel ="stylesheet" href="createClass.css">
+            <link rel ="stylesheet" href="/createClass.css">
             <script src="https://kit.fontawesome.com/57a72e588d.js" crossorigin="anonymous"></script>
         </head>
         <body>
 
             <div id = "horizontalMenu">
-                <a class = "links" href = "index.html">Home<i class="fas fa-home"></i></a>
-                <a class = "links" href = "classes.html">Classes<i class="fas fa-book"></i></a>
-                <a class = "links" href = "students.html">Students<i class="fas fa-users"></i></a>
-                <a class = "links" href = "addStudents.html">Add Students<i class="fas fa-plus"></i></a>
-                <a class = "links" href = "teachers.html">Teachers<i class="fas fa-users"></i></a>
-                <a class = "links" href = "attendance.html">Take Attendance<i class="fas fa-address-book"></i></a>
+
+                <a class = "links" href = "index.ejs">Home<i class="fas fa-home"></i></a>
+                <a class = "links" href = "classes.ejs">Classes<i class="fas fa-book"></i></a>
+                <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
+                <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+                <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
+
             </div><br><br>
+
+            <p id = "warning">The ClassID should not have slashes / or spaces</p>
 
                 <form id="classCreation" name ="classCreation" action ="/createClass" method="post">
                     <legend id="legend">Create Class</legend><br>
@@ -25,6 +29,6 @@
                 </form><br><br>
                 <p id = "notification"></p>
         </body>
-        <script src ="createClass.js">
+        <script src ="/createClass.js">
         </script>
     </html>
