--- a/views/students.ejs
+++ b/views/students.ejs
@@ -2,22 +2,22 @@
 <html>
    
 <head>
-    <link rel ="stylesheet" href="students.css">
+    <link rel ="stylesheet" href="/students.css">
     <script src="https://kit.fontawesome.com/57a72e588d.js" crossorigin="anonymous"></script>
 </head>
 
     <body>
         <div id = "horizontalMenu">
-            <a class = "links" href = "index.html">Home<i class="fas fa-home"></i></a>
-            <a class = "links" href = "classes.html">Classes<i class="fas fa-book"></i></a>
-            <a class = "links" href = "createClass.html">Create Class<i class="fas fa-plus"></i></a>
-            <a class = "links" href = "addStudents.html">Add Students<i class="fas fa-plus"></i></a>
-            <a class = "links" href = "teachers.html">Teachers<i class="fas fa-users"></i></a>
-            <a class = "links" href = "attendance.html">Take Attendance<i class="fas fa-address-book"></i></a>
+            <a class = "links" href = "index.ejs">Home<i class="fas fa-home"></i></a>
+            <a class = "links" href = "classes.ejs">Classes<i class="fas fa-book"></i></a>
+            <a class = "links" href = "createClass.ejs">Create Class<i class="fas fa-plus"></i></a>
+            <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
+            <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+            <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
         </div><br><br>
     </body>
     </html>
-    <script src = "students.js">
+    <script src = "/students.js">
 
     </script>
 </html>
