--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -25,8 +25,9 @@
                 <option value = "<%= classes[i].ClassID%>"><%= classes[i].ClassID %></option>
                 <% } %>
             </select><br><br>
-        <input class="button" type ="submit" value = "Retrieve Class">
-        </form>
+        <input class="button" type ="submit" value = "Retrieve Class Details">
+        </form><br><br>
+        
     </body>
     <script src = "/classes.js">
 
