--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,45 +10,46 @@
         </head>
 
         <body>
-
             <div id = "horizontalMenu">
-                <a class = "links" href = "classes.ejs" target = "_blank">Classes<i class="fas fa-book"></i></a>
-                <a class = "links" href = "createClass.ejs" target = "_blank">Create Class<i class="fas fa-plus"></i></a>
-                <a class = "links" href = "students.ejs" target = "_blank">Students<i class="fas fa-users"></i></a>
-                <a class = "links" href = "addStudents.ejs" target = "_blank">Add Students<i class="fas fa-plus"></i></a>
-                <a class = "links" href = "teachers.ejs" target = "_blank">Teachers<i class="fas fa-users"></i></a>
-                <a class = "links" href = "attendance.ejs" target = "_blank">Take Attendance<i class="fas fa-address-book"></i></a>
+                <div id = "menuIcons">
+                    <p></p>
+                    <a class = "links" href = "classes.ejs" target = "_blank">Classes<i class="fas fa-book"></i></a>
+                    <a class = "links" href = "createClass.ejs" target = "_blank">Create Class<i class="fas fa-plus"></i></a>
+                    <a class = "links" href = "students.ejs" target = "_blank">Students<i class="fas fa-users"></i></a>
+                    <a class = "links" href = "addStudents.ejs" target = "_blank">Add Students<i class="fas fa-plus"></i></a>
+                    <a class = "links" href = "teachers.ejs" target = "_blank">Teachers<i class="fas fa-users"></i></a>
+                    <a class = "links" href = "attendance.ejs" target = "_blank">Take Attendance<i class="fas fa-address-book"></i></a>
+                    <p></p>
+                </div>
             </div><br><br>
 
-            <div id = "set1">
-                    <a href="createClass.html" target="_blank">
-                        <button id ="createClass-btn">Create Class<i class="fas fa-plus"></i></button>
-                    </a>
-                    <a href="classes.html" target="_blank">
-                        <button id ="classes">Classes<br><i class="fas fa-book"></i></button>
-                    </a>
-                    <a href="teachers.html" target="_blank">
-                        <button id="teachers">Teachers<br><i class="fas fa-users"></i></button>
-                    </a>
-            </div>
-            
-            <div id ="set2">
-                    <a href="addStudents.html" target="_blank">
-                        <button id = "addStudents">Add Students<i class="fas fa-plus"></i></button>
-                    </a>
-                    <a href="attendance.html" target="_blank">
-                        <button id="attendance">Take Attendance<i class="fas fa-address-book"></i></button>
-                    </a>
-                    <a href="students.html" target="_blank">
-                        <button id="students">Students<i class="fas fa-users"></i></button>
-                    </a>
-            </div>
-
-            <div id="footer">
+                        <div id = "set1">
+                            <a href="createClass.ejs" target="_blank">
+                                <button class = "mainModules" >Create Class<i class="fas fa-plus"></i></button>
+                            </a>
+                            <a href="classes.ejs" target="_blank">
+                                <button class = "mainModules">Classes<br><i class="fas fa-book"></i></button>
+                            </a>
+                            <a href="teachers.ejs" target="_blank">
+                                <button class = "mainModules">Teachers<br><i class="fas fa-users"></i></button>
+                            </a>
+                        </div >
+                        <div id = "set2">
+                            <a href="addStudents.ejs" target="_blank">
+                                <button class = "mainModules">Add Students<i class="fas fa-plus"></i></button>
+                            </a>
+                            <a href="attendance.ejs" target="_blank">
+                                <button class = "mainModules">Take Attendance<i class="fas fa-address-book"></i></button>
+                            </a>
+                            <a href="students.ejs" target="_blank">
+                                <button class = "mainModules">Students<i class="fas fa-users"></i></button>
+                            </a>
+                        </div>
+            <!-- <div id="footer">
                 <p>Developer: Taylor Omondi Odhiambo Email: tayloromondi05@gmail.com</p>
                 <p>CSC 227: Programming Project</p>
                 <p>Supervisor: Christopher A. Moturi</p>
-            </div>
+            </div> -->
 
         </body>
 
