--- a/views/students.ejs
+++ b/views/students.ejs
@@ -8,25 +8,32 @@
 
     <body>
         <div id = "horizontalMenu">
-            <a class = "links" href = "index.ejs">Home<i class="fas fa-home"></i></a>
-            <a class = "links" href = "classes.ejs">Classes<i class="fas fa-book"></i></a>
-            <a class = "links" href = "createClass.ejs">Create Class<i class="fas fa-plus"></i></a>
-            <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
-            <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
-            <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
+            <div id = "menuIcons">
+                <p></p>
+                <a class = "links" href = "index.ejs">Home<i class="fas fa-home"></i></a>
+                <a class = "links" href = "classes.ejs">Classes<i class="fas fa-book"></i></a>
+                <a class = "links" href = "createClass.ejs">Create Class<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+                <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
+                <p></p>
+            </div>
         </div><br><br>
 
-        <form action="/students" method="post" id = "students">
-            <legend id = "legend">Classes</legend><br>
-            <label for = "teachers">Teacher:</label>
-            <select type = "text" name = "student">
-                <option value = "">Select Student</option>
-                <% for (let i = 0; i < students.length; i ++) {%>
-                    <option value = "<%= students[i].StudentID %>"> <%= students[i].StudentID %></option>
-                <% } %>
-            </select><br><br>
-            <input class = "button" type = "submit" value = "Retrieve Student Details">
-        </form><br><br>
+        <div id = "form">
+            <h3 id = "warning">Select a student to view their data</h3>
+            <form action="/students" method="post" id = "students">
+                <legend id = "legend">Classes</legend><br>
+                <label for = "teachers">Teacher:</label>
+                <select type = "text" name = "student">
+                    <option value = "">Select Student</option>
+                    <% for (let i = 0; i < students.length; i ++) {%>
+                        <option value = "<%= students[i].StudentID %>"> <%= students[i].StudentID %></option>
+                    <% } %>
+                </select><br><br>
+                <input class = "button" type = "submit" value = "Retrieve Student Details">
+            </form><br><br>
+        </div>
     </body>
     </html>
     <script src = "/students.js">
