--- a/public/attendance.css
+++ b/public/attendance.css
@@ -2,13 +2,50 @@ body{
     background-color: #f2e9e4;
 }
 #horizontalMenu{
-    display: flex;
-    justify-content: space-around;
-    position: sticky;
-    top: 0px;
+    position: fixed;
+    width: 100%;
     background-color: #22223b;
+    left: 0%;
+    top: 0%;
+    height: 50px;
 }
+
+#menuIcons{
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    margin-top: 15px;
+}
+
 .links{
     color:#f2e9e4;
     text-decoration:none;
+}
+#legend{
+    background-color: #22223b;
+    color:#f2e9e4
+}
+
+#attendance{
+    border: solid black 3px;
+    display: block;
+    margin: 0 auto;
+    width: 270px;
+    height: 140px;
+    text-align: center;
+}
+#form{
+    margin: 100px 0;
+}
+.button{
+    background-color: #22223b;
+    color:#f2e9e4;
+    padding: 5px 10px;
+    border-radius: 10px;
+}
+
+#warning{
+    text-align: center;
+    color: #22223b;
+    font-weight: 1000;
 }
