--- a/public/createClass.css
+++ b/public/createClass.css
@@ -38,11 +38,18 @@ body{
     margin: 0 auto;
 }
 #horizontalMenu{
-    display: flex;
-    justify-content: space-around;
-    position: sticky;
-    top: 0px;
+    position: fixed;
+    width: 100%;
     background-color: #22223b;
+    left: 0%;
+    top: 0%;
+    height: 50px;
+}
+#menuIcons{
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    margin-top: 15px;
 }
 .links{
     color:#f2e9e4;
