--- a/public/displayStudents.css
+++ b/public/displayStudents.css
@@ -8,11 +8,19 @@ h2{
 }
 
 #horizontalMenu{
-    display: flex;
-    justify-content: space-around;
-    position: sticky;
-    top: 0px;
+    position: fixed;
+    width: 100%;
     background-color: #22223b;
+    left: 0%;
+    top: 0%;
+    height: 50px;
+}
+
+#menuIcons{
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    margin-top: 15px;
 }
 
 .links{
