--- a/public/students.css
+++ b/public/students.css
@@ -4,11 +4,18 @@ body{
 }
 
 #horizontalMenu{
-    display: flex;
-    justify-content: space-around;
-    position: sticky;
-    top: 0px;
+    position: fixed;
+    width: 100%;
     background-color: #22223b;
+    left: 0%;
+    top: 0%;
+    height: 50px;
+}
+#menuIcons{
+    display: flex;
+    justify-content: space-between;
+    height: 50px;
+    margin-top: 15px;
 }
 .links{
     color:#f2e9e4;
@@ -32,4 +39,13 @@ body{
     width: 270px;
     height: 140px;
     text-align: center;
+}
+#form{
+    margin: 100px 0;
+}
+
+#warning{
+    text-align: center;
+    color: #22223b;
+    font-weight: 1000;
 }
