--- a/views/attendance.ejs
+++ b/views/attendance.ejs
@@ -7,13 +7,33 @@
 </head>
     <body>
         <div id = "horizontalMenu">
+            <div id = "menuIcons">
+            <p></p>
             <a class = "links" href = "index.ejs">Home<i class="fas fa-home"></i></a>
             <a class = "links" href = "classes.ejs">Classes<i class="fas fa-book"></i></a>
             <a class = "links" href = "createClass.ejs">Create Classes<i class="fas fa-plus"></i></a>
             <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
             <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
             <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+            <p></p>
+            </div>
         </div><br><br>
+
+        <div id = "form">
+            <h3 id = "warning">Select a Class in order to receive its details</h3>
+            <form method = "post" action="/attendance" id = "attendance">
+            <legend id = "legend">Classes</legend><br>
+            <label for = "classID">Class ID:</label>
+                <select type = "text" name="classID" >
+                    <option value =""></option>
+                    <% for (let i = 0; i < classes.length; i++) {%>
+                    <option value = "<%= classes[i].ClassID%>"><%= classes[i].ClassID %></option>
+                    <% } %>
+                </select><br><br>
+            <input class="button" type ="submit" value = "Retrieve Class List">
+            </form><br><br>
+        </div>
+
     </body>
     </html>
     <script src = "/attendance.js">
