--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -8,27 +8,34 @@
 
     <body>
         <div id = "horizontalMenu">
-            <a class = "links" href = "index.ejs">Home<i class="fas fa-home"></i></a>
-            <a class = "links" href = "classes.ejs">Classes<i class="fas fa-book"></i></a>
-            <a class = "links" href = "createClass.ejs">Create Class<i class="fas fa-plus"></i></a>
-            <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
-            <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
-            <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
+            <div id = "menuIcons">
+                <p></p>
+                <a class = "links" href = "index.ejs">Home<i class="fas fa-home"></i></a>
+                <a class = "links" href = "classes.ejs">Classes<i class="fas fa-book"></i></a>
+                <a class = "links" href = "createClass.ejs">Create Class<i class="fas fa-plus"></i></a>
+                <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
+                <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+                <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
+                <p></p>
+            </div>
         </div><br><br>
-        <h3 id = "warning">Select a Class in order to receive its details</h3>
-        <form method = "post" action="/classes" id = "classes">
-        <legend id = "legend">Classes</legend><br>
-        <label for = "classID">Class ID:</label>
-            <select type = "text" name="classID" >
-                <option value =""></option>
-                <% for (let i = 0; i < classes.length; i++) {%>
-                <option value = "<%= classes[i].ClassID%>"><%= classes[i].ClassID %></option>
-                <% } %>
-            </select><br><br>
-        <input class="button" type ="submit" value = "Retrieve Class Details">
-        </form><br><br>
-        
+
+        <div id = "form">
+            <h3 id = "warning">Select a Class to view its data</h3>
+            <form method = "post" action="/classes" id = "classes">
+                <legend id = "legend">Classes</legend><br>
+                <label for = "classID">Class ID:</label>
+                    <select type = "text" name="classID" >
+                        <option value =""></option>
+                        <% for (let i = 0; i < classes.length; i++) {%>
+                        <option value = "<%= classes[i].ClassID%>"><%= classes[i].ClassID %></option>
+                        <% } %>
+                    </select><br><br>
+                <input class="button" type ="submit" value = "Retrieve Class Details">
+            </form><br><br>
+        </div>
     </body>
+
     <script src = "/classes.js">
 
     </script>
