Changed the options within the navigation menus

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,35 +13,35 @@
             <div id = "horizontalMenu">
                 <div id = "menuIcons">
                     <p></p>
-                    <a class = "links" href = "classes.ejs" target = "_blank">Classes<i class="fas fa-book"></i></a>
-                    <a class = "links" href = "createClass.ejs" target = "_blank">Create Class<i class="fas fa-plus"></i></a>
-                    <a class = "links" href = "students.ejs" target = "_blank">Students<i class="fas fa-users"></i></a>
-                    <a class = "links" href = "addStudents.ejs" target = "_blank">Add Students<i class="fas fa-plus"></i></a>
-                    <a class = "links" href = "teachers.ejs" target = "_blank">Teachers<i class="fas fa-users"></i></a>
-                    <a class = "links" href = "attendance.ejs" target = "_blank">Take Attendance<i class="fas fa-address-book"></i></a>
+                    <a class = "links" href = "classes.ejs">Classes<i class="fas fa-book"></i></a>
+                    <a class = "links" href = "createClass.ejs">Create Class<i class="fas fa-plus"></i></a>
+                    <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
+                    <a class = "links" href = "addStudents.ejs">Add Students<i class="fas fa-plus"></i></a>
+                    <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
+                    <a class = "links" href = "attendance.ejs">Take Attendance<i class="fas fa-address-book"></i></a>
                     <p></p>
                 </div>
             </div><br><br>
 
                         <div id = "set1">
-                            <a href="createClass.ejs" target="_blank">
+                            <a href="createClass.ejs">
                                 <button class = "mainModules" >Create Class<i class="fas fa-plus"></i></button>
                             </a>
-                            <a href="classes.ejs" target="_blank">
+                            <a href="classes.ejs">
                                 <button class = "mainModules">Classes<br><i class="fas fa-book"></i></button>
                             </a>
-                            <a href="teachers.ejs" target="_blank">
+                            <a href="teachers.ejs">
                                 <button class = "mainModules">Teachers<br><i class="fas fa-users"></i></button>
                             </a>
                         </div >
                         <div id = "set2">
-                            <a href="addStudents.ejs" target="_blank">
+                            <a href="addStudents.ejs">
                                 <button class = "mainModules">Add Students<i class="fas fa-plus"></i></button>
                             </a>
-                            <a href="attendance.ejs" target="_blank">
+                            <a href="attendance.ejs">
                                 <button class = "mainModules">Take Attendance<i class="fas fa-address-book"></i></button>
                             </a>
-                            <a href="students.ejs" target="_blank">
+                            <a href="students.ejs">
                                 <button class = "mainModules">Students<i class="fas fa-users"></i></button>
                             </a>
                         </div>
