--- a/views/classes.ejs
+++ b/views/classes.ejs
@@ -11,7 +11,7 @@
             <div id = "menuIcons">
                 <p></p>
                 <a class = "links" href = "index.ejs">Home<i class="fas fa-home"></i></a>
-                <a class = "links" href = "classes.ejs">Classes<i class="fas fa-book"></i></a>
+                <a class = "links" href = "addStudents.ejs" target = "_blank">Add Students<i class="fas fa-plus"></i></a>
                 <a class = "links" href = "createClass.ejs">Create Class<i class="fas fa-plus"></i></a>
                 <a class = "links" href = "students.ejs">Students<i class="fas fa-users"></i></a>
                 <a class = "links" href = "teachers.ejs">Teachers<i class="fas fa-users"></i></a>
